tests/parse/error/empty.err
Error: Unexpected end of input, expected <expression>
   ╭─[tests/parse/error/empty.scm:1:1]
   │
 1 │ 
   · ┬  
   · ╰── Unexpected end of file
───╯
